<resources>
    <string name="app_name">NavUp</string>
    <string name="user_name">User name</string>
    <string name="button_Login">Login</string>
    <string name="user_password">Password</string>
    <string name="button_Register">Register</string>
    <string name="button_guestLogin">Guest</string>
    <string name="user_email">Email@example.com</string>
    <string name="Back">Back</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_application_screen">ApplicationScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_page">navigationPage</string>
    <string name="default_info_title">Default Location</string>

    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <string name="option_get_place">Get place</string>

    <string name="pick_place">Choose a place</string>
</resources>
