<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="za.ac.up.cs.www.navup.MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:hint="@string/user_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/NavUP_blue"
        android:elevation="0dp"
        android:onClick="Login"
        android:text="@string/button_Login"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMsg" />

    <Button
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/NavUP_red"
        android:onClick="go_to_registerPage"
        android:text="@string/button_Register"
        android:textColor="@android:color/background_light"
        app:layout_constraintDimensionRatio="w,3:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <Button
        android:id="@+id/Guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="login_as_guest"
        android:text="@string/button_guestLogin"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="123dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/navup_logo" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

</android.support.constraint.ConstraintLayout>
